k8s/prod/mosquitto/namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: mosquitto
  labels:
    name: hass
