k8s/prod/mosquitto/mosquitto.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: mosquitto
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mosquitto
    app.kubernetes.io/version: 2.0.14
    helm.sh/chart: mosquitto-4.8.2
  name: mosquitto
  namespace: mosquitto
spec:
  ports:
  - name: mqtt
    port: 1883
    protocol: TCP
    targetPort: mqtt
  selector:
    app.kubernetes.io/instance: mosquitto
    app.kubernetes.io/name: mosquitto
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: mosquitto
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mosquitto
    app.kubernetes.io/version: 2.0.14
    helm.sh/chart: mosquitto-4.8.2
  name: mosquitto
  namespace: mosquitto
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: mosquitto
      app.kubernetes.io/name: mosquitto
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: mosquitto
        app.kubernetes.io/name: mosquitto
    spec:
      automountServiceAccountToken: true
      containers:
      - name: mosquitto
        image: eclipse-mosquitto:2.0.18
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 0
          periodSeconds: 10
          tcpSocket:
            port: 1883
          timeoutSeconds: 1
        ports:
        - containerPort: 1883
          name: mqtt
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 0
          periodSeconds: 10
          tcpSocket:
            port: 1883
          timeoutSeconds: 1
        startupProbe:
          failureThreshold: 30
          initialDelaySeconds: 0
          periodSeconds: 5
          tcpSocket:
            port: 1883
          timeoutSeconds: 1
        volumeMounts:
        - mountPath: /mosquitto/config/mosquitto.conf
          name: mosquitto-config
          subPath: mosquitto.conf
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      nodeSelector:
        kubernetes.io/arch: arm64
      serviceAccountName: default
      volumes:
      - configMap:
          name: mosquitto-config
        name: mosquitto-config
