k8s/prod/mosquitto/tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mosquitto
spec:
  defaultBackend:
    service:
      name: mosquitto
      port:
        number: 1883
  ingressClassName: tailscale
